--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -12,7 +12,7 @@
   </head>
   <body>
 
-    <main role="main" class="container">
+    <!--<main role="main" class="container">
 
         <h1 class="mt-5">{{ question.question_text}}</h1>
 
@@ -23,10 +23,24 @@
             {% endfor %}
             </ul>
         </p>
-        <a href = "/polls"> Back to Polls</a>
-        
-        </main>
 
+        </main> -->
+        <main role="main" class="container">
+
+        <form action="{% url 'polls:vote' question.id %}" method="post">
+            {% csrf_token %}
+            <fieldset>
+                <legend><h1 class="mt-5">{{ question.question_text }}</h1></legend>
+                {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+                {% for choice in question.choice_set.all %}
+                    <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}">
+                    <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br>
+                {% endfor %}
+            </fieldset>
+            <input type="submit" value="Vote">
+            </form>
+            <a href = "/polls"> Back to Polls</a>
+        </main>
         <footer class="footer">
             <div class="container">
                 <span class="text-muted">Django Part 3 Tutorial <a class="text-info" href = https://github.com/curtisw27/mysite>Github link</a></span>
